@@ -18,6 +18,10 @@ PHP                                                                        NEWS
   . Fixed bug #69970 (Use-after-free vulnerability in
     spl_recursive_it_move_forward_ex()). (Laruence)
 
+- Sqlite3:
+  . Fixed bug #69972 (Use-after-free vulnerability in
+    sqlite3SafetyCheckSickOrOk()). (Laruence)
+
 09 Jul 2015, PHP 5.6.11
 
 - Core:
